# podology_renderer_blender_ticker

./: .gitignore  Dockerfile  Dockerfile.bak  Readme.md  pyproject.toml  requirements.txt
podology_renderer/: server.py
podology_renderer/render/: blender_script.py  canvas.blend  render_functions.py  wordticker.py
