[tool.poetry]
name = "podology-renderer"
version = "0.1.0"
description = ""
authors = ["Andreas Domberg <andom@posteo.de>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.12"
python-dotenv = "^1.1.0"
uvicorn = "^0.34.2"
loguru = "^0.7.3"
numpy = "^2.3.1"
pandas = "^2.3.0"
plotly = "^6.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
